change irc server

--- a/contrib/debian/dotcoin-qt.desktop
+++ b/contrib/debian/dotcoin-qt.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=NovaCoin
-Comment=NovaCoin P2P Cryptocurrency
-Comment[fr]=NovaCoin, monnaie virtuelle cryptographique pair à pair
-Comment[tr]=NovaCoin, eşten eşe kriptografik sanal para birimi
+Name=DotCoin
+Comment=DotCoin P2P Cryptocurrency
+Comment[fr]=DotCoin, monnaie virtuelle cryptographique pair à pair
+Comment[tr]=DotCoin, eşten eşe kriptografik sanal para birimi
 Exec=/usr/bin/dotcoin-qt
 Terminal=false
 Type=Application
