--- a/contrib/debian/examples/dotcoin.conf
+++ b/contrib/debian/examples/dotcoin.conf
@@ -26,7 +26,7 @@
 
 # JSON-RPC options (for controlling a running process)
 
-# server=1 tells NovaCoin to accept JSON-RPC commands.
+# server=1 tells DotCoin to accept JSON-RPC commands.
 #server=1
 
 # You must set rpcuser and rpcpassword to secure the JSON-RPC api
@@ -42,12 +42,12 @@
 # Listen for RPC connections on this TCP port:
 rpcport=8332
 
-# You can use NovaCoin or dotcoind to send commands to Dotcoin/dotcoindNovaCoin/dotcoind
+# You can use DotCoin or dotcoind to send commands to Dotcoin/dotcoindDotCoin/dotcoind
 # running on another host using this option:
 rpcconnect=127.0.0.1
 
 # Use Secure Sockets Layer (also known as TLS or HTTPS) to communicate
-# with NovaCoin -server or dotcoind
+# with DotCoin -server or dotcoind
 #rpcssl=1
 
 # OpenSSL settings used when rpcssl=1
@@ -74,7 +74,7 @@ paytxfee=0.01
 
 # User interface options
 
-# Start NovaCoin minimized
+# Start DotCoin minimized
 #min=1
 
 # Minimize to the system tray
