--- a/contrib/gitian-descriptors/gitian.yml
+++ b/contrib/gitian-descriptors/gitian.yml
@@ -24,7 +24,7 @@ remotes:
   "dir": "dotcoin"
 files:
 - "miniupnpc-1.6.tar.gz"
-- "qrencode-3.2.0.tar.bz2"
+- "qrencode-3.2.0.tar.gz"
 script: |
   INSTDIR="$HOME/install"
   export LIBRARY_PATH="$INSTDIR/lib"
@@ -34,7 +34,7 @@ script: |
   INSTALLPREFIX=$INSTDIR make $MAKEOPTS install
   cd ..
   #
-  tar xjf qrencode-3.2.0.tar.bz2
+  tar xjf qrencode-3.2.0.tar.gz
   cd qrencode-3.2.0
   ./configure --prefix=$INSTDIR --enable-static --disable-shared
   make $MAKEOPTS install
