generate genesis block

--- a/contrib/gitian-descriptors/gitian-win32.yml
+++ b/contrib/gitian-descriptors/gitian-win32.yml
@@ -1,5 +1,5 @@
 ---
-name: "dotcoin"
+name: "ppcoin"
 suites:
 - "lucid"
 architectures:
@@ -12,24 +12,24 @@ packages:
 - "faketime"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/dotcoin/dotcoin.git"
+- "url": "https://github.com/ppcoin/ppcoin.git"
   "dir": "dotcoin"
 files:
-- "qt-win32-4.7.4-gitian.zip"
-- "boost-win32-1.47.0-gitian.zip"
-- "dotcoin-deps-0.0.1.zip"
+- "qt-win32-4.8.4-gitian.zip"
+- "boost-win32-1.53.0-gitian.zip"
+- "dotcoin-deps-1.0.0.zip"
 script: |
   #
   mkdir $HOME/qt
   cd $HOME/qt
-  unzip ../build/qt-win32-4.7.4-gitian.zip
+  unzip ../build/qt-win32-4.8.4-gitian.zip
   cd $HOME/build/
   export PATH=$PATH:$HOME/qt/bin/
   #
-  mkdir boost_1_47_0
-  cd boost_1_47_0
+  mkdir boost_1_53_0
+  cd boost_1_53_0
   mkdir -p stage/lib
-  unzip ../boost-win32-1.47.0-gitian.zip
+  unzip ../boost-win32-1.53.0-gitian.zip
   cd bin/$GBUILD_BITS
   for lib in *; do
     i586-mingw32msvc-ar rc ../../stage/lib/libboost_${lib}-mt-s.a $lib/*.o
@@ -39,11 +39,11 @@ script: |
   mv include/boost .
   cd ..
   #
-  unzip dotcoin-deps-0.0.1.zip
+  unzip ppcoin-deps-1.0.0.0.zip
   #
   find -type f | xargs touch --date="$REFERENCE_DATETIME"
   #
-  cd dotcoin
+  cd ppcoin
   mkdir -p $OUTDIR/src
   git archive HEAD | tar -x -C $OUTDIR/src
   cp $OUTDIR/src/doc/README_windows.txt $OUTDIR/readme.txt
@@ -51,7 +51,7 @@ script: |
   export LD_PRELOAD=/usr/lib/faketime/libfaketime.so.1
   export FAKETIME=$REFERENCE_DATETIME
   export TZ=UTC
-  $HOME/qt/src/bin/qmake -spec unsupported/win32-g++-cross MINIUPNPC_LIB_PATH=$HOME/build/miniupnpc MINIUPNPC_INCLUDE_PATH=$HOME/build/ BDB_LIB_PATH=$HOME/build/db-4.8.30.NC/build_unix BDB_INCLUDE_PATH=$HOME/build/db-4.8.30.NC/build_unix BOOST_LIB_PATH=$HOME/build/boost_1_47_0/stage/lib BOOST_INCLUDE_PATH=$HOME/build/boost_1_47_0 BOOST_LIB_SUFFIX=-mt-s BOOST_THREAD_LIB_SUFFIX=_win32-mt-s OPENSSL_LIB_PATH=$HOME/build/openssl-1.0.1b OPENSSL_INCLUDE_PATH=$HOME/build/openssl-1.0.1b/include QRENCODE_LIB_PATH=$HOME/build/qrencode-3.2.0/.libs QRENCODE_INCLUDE_PATH=$HOME/build/qrencode-3.2.0 USE_QRCODE=1 INCLUDEPATH=$HOME/build DEFINES=BOOST_THREAD_USE_LIB DOTCOIN_NEED_QT_PLUGINS=1 QMAKE_LRELEASE=lrelease QMAKE_CXXFLAGS=-frandom-seed=dotcoin QMAKE_LFLAGS=-frandom-seed=dotcoin USE_BUILD_INFO=1
+  $HOME/qt/src/bin/qmake -spec unsupported/win32-g++-cross MINIUPNPC_LIB_PATH=$HOME/build/miniupnpc MINIUPNPC_INCLUDE_PATH=$HOME/build/ BDB_LIB_PATH=$HOME/build/db-5.3.21.NC/build_unix BDB_INCLUDE_PATH=$HOME/build/db-5.3.21.NC/build_unix BOOST_LIB_PATH=$HOME/build/boost_1_53_0/stage/lib BOOST_INCLUDE_PATH=$HOME/build/boost_1_53_0 BOOST_LIB_SUFFIX=-mt-s BOOST_THREAD_LIB_SUFFIX=_win32-mt-s OPENSSL_LIB_PATH=$HOME/build/openssl-1.0.1e OPENSSL_INCLUDE_PATH=$HOME/build/openssl-1.0.1e/include QRENCODE_LIB_PATH=$HOME/build/qrencode-3.4.2/.libs QRENCODE_INCLUDE_PATH=$HOME/build/qrencode-3.4.2 USE_QRCODE=1 INCLUDEPATH=$HOME/build DEFINES=BOOST_THREAD_USE_LIB BITCOIN_NEED_QT_PLUGINS=1 QMAKE_LRELEASE=lrelease QMAKE_CXXFLAGS=-frandom-seed=ppcoin QMAKE_LFLAGS=-frandom-seed=dotcoin USE_BUILD_INFO=1
   make $MAKEOPTS
   cp release/dotcoin-qt.exe $OUTDIR/
   #
